--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
+# Virtual Environment
+venv/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# OS-specific
 .DS_Store
+
+# Data and models
+data/
+models/
